--- a/values.yaml
+++ b/values.yaml
@@ -8,6 +8,8 @@ image:
 service:
   name: sample-service
   type: ClusterIP
+  externalPort: 80
+  internalPort: 80
 resources:
   limits:
     cpu: 2000m
