--- a/helm/templates/artifactory-secret.yaml
+++ b/helm/templates/artifactory-secret.yaml
@@ -4,9 +4,9 @@ data:
 kind: Secret
 metadata:
   creationTimestamp: 2017-03-23T15:00:59Z
-  name: artifactory-secret
+  name: ngpregistry
   namespace: payroll
   resourceVersion: "248694"
-  selfLink: /api/v1/namespaces/default/secrets/artifactory-secret
+  selfLink: /api/v1/namespaces/default/secrets/ngpregistry
   uid: 861fe28a-0fd9-11e7-a3f8-fa163eed4a1b
 type: kubernetes.io/dockercfg
