--- a/service/pom.xml
+++ b/service/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.sap.ngp.test</groupId>
 		<artifactId>sample-repo</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>[1.0.0,)</version>
 	</parent>
 
 	<packaging>jar</packaging>
