--- a/service/pom.xml
+++ b/service/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>com.sap.ngp.test</groupId>
 		<artifactId>sample-repo</artifactId>
 		<version>[1.0.0,)</version>
-		<relativePath>../public-sample-repo</relativePath>
+		<relativePath>../sample-repo</relativePath>
 	</parent>
 
 	<packaging>jar</packaging>
