--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -4,16 +4,16 @@
 replicaCount: 1
 image:
   repository: docker.wdf.sap.corp:51032/sandbox/public-sample-repo:1.0.0-20170420-145335.c77f17e-SNAPSHOT
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 service:
-  name: sample-service
+  name: infrastructure-sample-service
   type: NodePort
   externalPort: 8080
   internalPort: 8080
 resources:
   limits:
-    cpu: 1000m
-    memory: 1024Mi
+    cpu: 2000m
+    memory: 2048Mi
   requests:
     cpu: 1000m
     memory: 1024Mi
