--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,11 +2,11 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
+serviceId: infrastructure-sample-service
 image:
   repository: docker.wdf.sap.corp:51032/sandbox/public-sample-repo:1.0.0-20170420-145335.c77f17e-SNAPSHOT
   pullPolicy: IfNotPresent
 service:
-  name: infrastructure-sample-service
   type: NodePort
   externalPort: 8080
   internalPort: 8080
