--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     metadata:
       labels:
-        app: mysample
+        app: {{ .Values.serviceId }}
     spec:
       imagePullSecrets:
         - name: ngpregistry
