--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: payroll
-  name: {{ .Values.serviceId }}
+  name: {{ .Values.applicationId }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     context: ngp
@@ -14,5 +14,5 @@ spec:
     protocol: TCP
     name: web
   selector:
-    app: {{ .Values.serviceId }}
+    app: {{ .Values.applicationId }}
   type: NodePort
