--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -24,10 +24,10 @@ spec:
 #        livenessProbe:
 #          httpGet:
 #            path: /
-#            port: {{ .Values.service.internalPort }}
+#            port: {{ .Values.service.applicationPort  }}
 #        readinessProbe:
 #          httpGet:
 #            path: /
-#            port: {{ .Values.service.internalPort }}
+#            port: {{ .Values.service.applicationPort  }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
