--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,6 +1,6 @@
 replicaCount: 1
 applicationId: infrastructure-sample-service
-applicationPort: 8080 # Spring Boot application port(default is 8080)
+applicationPort: 8080
 image:
   repository: docker.wdf.sap.corp:51032/sandbox/public-sample-repo:1.0.0-20170420-145335.c77f17e-SNAPSHOT
 resources:
