--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 applicationId: infrastructure-sample-service
 applicationPort: 8080
 image:
-  repository: docker.wdf.sap.corp:51032/sandbox/public-sample-repo:1.0.0-20170420-145335.c77f17e-SNAPSHOT
+  repository: docker.wdf.sap.corp:51032/sandbox/public-sample-repo:1.0.0-SNAPSHOT-fadb26a
 resources:
   limits:
     cpu: 2000m
