--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.replicaCount | default 1 }}
   template:
     metadata:
       labels:
