--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,15 +13,14 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.sap.ngp.test.commons</groupId>
-			<artifactId>starters-basic</artifactId>
-			<version>0.2.1-SNAPSHOT</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-data-jpa</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
 		<dependency>
