--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.sap.ngp.test</groupId>
-	<artifactId>sample-repo</artifactId>
+	<artifactId>sample-repo-consumer</artifactId>
 	<packaging>pom</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 
-	<name>sample-repo</name>
-	<description>Sample Repo</description>
+	<name>sample-repo-consumer</name>
+	<description>Sample Repo Consumer</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -17,7 +17,7 @@
 		<version>1.5.1.RELEASE</version>
 	</parent>
 
-	
+
 
 	<dependencyManagement>
 		<dependencies>
@@ -30,20 +30,29 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			
 
-			
+
+
 
 			<dependency>
 				<groupId>au.com.dius</groupId>
 				<artifactId>pact-jvm-consumer-junit_2.11</artifactId>
 				<version>3.3.8</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-contract-dependencies</artifactId>
+				<version>1.1.0.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 
 		</dependencies>
+
+
 	</dependencyManagement>
 
-	
+
 
 	<build>
 
@@ -56,7 +65,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
